--- a/nbs/index.ipynb
+++ b/nbs/index.ipynb
@@ -2,8 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-13T08:02:56.716088442Z",
+     "start_time": "2023-12-13T08:02:56.702960216Z"
+    }
+   },
    "outputs": [],
    "source": [
     "#| hide\n"
@@ -13,23 +18,24 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# UAV\n",
+    "# MAVCOM\n",
     "\n",
-    "> All things that go into a UAV: Cameras, Software, Telemetry etc"
+    "\n",
+    "> Mavlink Telemetry library"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "documentation is available at [UAV docs](https://johnnewto.github.io/UAV/)"
+    "documentation is available at [Mavcom docs](https://johnnewto.github.io/mavcom/)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Guide to developing with UAV"
+    "## Guide to developing with Mavcom"
    ]
   },
   {
@@ -51,7 +57,8 @@
     "There are 2 or 3 options for Linux architectures: \n",
     "\n",
     "- [Linux x86_64 (amd64)](https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-Linux-x86_64.sh)\n",
-    "- [Linux aarch64 (arm64)](https://github.com/conda-forge/miniforge/releases/latest/download/Miniforge3-Linux-aarch64.sh)\n",
+    "- [Python 3.8 Linux aarch64 (arm64)](https://repo.anaconda.com/miniconda/Miniconda3-py38_23.10.0-1-Linux-aarch64.sh)     Note: on Jetson 3.10 might fail with a segment fault on arm64 with gstreamer\n",
+    "- [Latest Miniconda installer links by Python version](https://docs.conda.io/projects/miniconda/en/latest/miniconda-other-installer-links.html)\n",
     "\n",
     "Give the script execution permission and run it to install into `~/miniforge3`\n",
     "\n",
@@ -59,9 +66,14 @@
     "chmod +x Miniforge3-Linux-x86_64.sh\n",
     "./Miniforge3-Linux-x86_64.sh\n",
     "```\n",
+    "or \n",
+    "```\n",
+    "./Miniconda3-py38_23.10.0-1-Linux-aarch64.sh\n",
+    "```\n",
+    "    \n",
     "Follow the prompts to install\n",
     "\n",
-    "2. Download UAV from github and create a virtual environment\n",
+    "2. Download Mavcom from github and create a virtual environment\n",
     "\n",
     "```sh\n",
     "mkdir repos\n",
@@ -72,19 +84,7 @@
     "source ./venv/bin/activate\n",
     "pip install --upgrade pip\n",
     "pip install -e .\n",
-    "```\n",
-    "3. Install gstreamer\n",
-    "\n",
-    "```sh\n",
-    "sudo apt-get install libcairo2 libcairo2-dev libgirepository1.0-dev\n",
-    "sudo apt install libgirepository1.0-dev\n",
-    "sudo apt-get install libgstreamer1.0-dev libgstreamer-plugins-base1.0-dev libgstreamer-plugins-bad1.0-dev gstreamer1.0-plugins-base gstreamer1.0-plugins-good gstreamer1.0-plugins-bad gstreamer1.0-plugins-ugly gstreamer1.0-libav gstreamer1.0-tools gstreamer1.0-x gstreamer1.0-alsa gstreamer1.0-gl gstreamer1.0-gtk3 gstreamer1.0-qt5 gstreamer1.0-pulseaudio\n",
-    "```\n",
-    "4. Install gstreamer-python\n",
-    "\n",
-    "```sh\n",
-    "pip install git+https://github.com/johnnewto/gstreamer-python.git\n",
-    "```"
+    "```\n"
    ]
   },
   {
@@ -96,28 +96,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Airsim  ( optional for dev  )\n",
-    "AirSim is a simulator for drones, cars and more, built on [Unreal Engine](https://www.unrealengine.com/) (we now also have an experimental [Unity](https://unity3d.com/) release). It is open-source, cross platform, and supports software-in-the-loop simulation with popular flight controllers such as PX4 & ArduPilot and hardware-in-loop with PX4 for physically and visually realistic simulations. It is developed as an Unreal plugin that can simply be dropped into any Unreal environment. Similarly, we have an experimental release for a Unity plugin.\n",
-    "\n",
-    "Their goal was to develop AirSim as a platform for AI research to experiment with deep learning, computer vision and reinforcement learning algorithms for autonomous vehicles. For this purpose, AirSim also exposes APIs to retrieve data and control vehicles in a platform independent way.\n",
-    "[![AirSim Drone Demo Video](images/demo_video.png)](https://youtu.be/-WfTr1-OBGQ)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#### Install Airsim\n",
-    "\n",
-    "For the binary releases of Airsim see [https://github.com/microsoft/AirSim/releases/tag/v1.8.1](https://github.com/microsoft/AirSim/releases/tag/v1.8.1)\n",
-    "We recommend the linux version as this repo is developed on linux.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Developing with nbdev - Initial setup\n",
+    "## Documenting with nbdev - Initial setup\n",
     "if you want to develop with nbdev, you'll need to install it first.\n",
     "For a step-by-step guide to using nbdev   [guide to using nbdev](https://nbdev.fast.ai/tutorials/tutorial.html)\n",
     "You'll need the following software to develope using nbdev:\n",
@@ -146,29 +125,6 @@
     "pip install pre-commit\n",
     "```\n",
     "see [nbdev Pre-Commit Hooks](https://nbdev.fast.ai/tutorials/pre_commit.html) for more details"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "\n",
-    "#### Install msgpack-rpc-python with tornado 4.5.3\n",
-    "To run airsim in or beside jupyter notebook you need msgpack-rpc-python to have an old version of tornado.\n",
-    "The latest version of msgpack-rpc-python is 0.4.1, which requires tornado 4.5.3.\n",
-    "The latest version of tornado is 6.1, which is not compatible with msgpack-rpc-python.\n",
-    "\n",
-    "The repo [https://github.com/xaedes/msgpack-rpc-python/tree/with_tornado_453](https://github.com/xaedes/msgpack-rpc-python/tree/with_tornado_453) is a fork of msgpack-rpc-python which\n",
-    "includes tornado 4.5.3 directly in the repo. \n",
-    "\n",
-    "Install msgpack-rpc-python with integrated tornado, pip install from this repo\n",
-    "[https://github.com/johnnewto/msgpack-rpc-python/tree/with_tornado_453](https://github.com/johnnewto/msgpack-rpc-python/tree/with_tornado_453)\n",
-    "\n",
-    "```\n",
-    "pip uninstall msgpack-rpc-python\n",
-    "pip install git+https://github.com/johnnewto/msgpack-rpc-python.git@with_tornado_453\n",
-    "```\n",
-    "\n"
    ]
   },
   {
@@ -269,8 +225,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
+   "execution_count": 1,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2023-12-13T08:02:56.745147656Z",
+     "start_time": "2023-12-13T08:02:56.744562330Z"
+    }
+   },
    "outputs": [],
    "source": []
   }
